[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yograph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "hishel[httpx]>=1.1.8",
    "httpx>=0.28.1",
]

[tool.setuptools]
py-modules = ["dashboard", "lib", "main", "ytl"]
